// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Resolver Creates new user correctly 1`] = `
Object {
  "data": Object {
    "register": Object {
      "errors": Array [
        Object {
          "field": "email",
          "message": "Provided email address is already in use.",
        },
      ],
      "user": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User Resolver Log in new user correctly 1`] = `
Object {
  "data": Object {
    "login": Object {
      "errors": null,
      "user": Object {
        "createdAt": "2022-07-20T21:14:27.823Z",
        "email": "test@test.com",
        "id": "6f296238-5d37-4e87-957a-f8151efe0c67",
        "updatedAt": "2022-07-20T21:14:27.824Z",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
